2007-11-14  Mathias Hasselmann  <mathias@openismus.com>

	Update to gtk-doc trunk.

	* gtk-doc.make: Update to trunk version.
	* docs/reference/libepc/.gitignore: Add libepc-1.0-undeclared.txt.

2007-11-14  Mathias Hasselmann  <mathias@openismus.com>

	Append "-1.0" suffix to package name.

	* libepc-1.0.pc, libepc-ui-1.0.pc: Renamed.
	* configure.ac, .gitignore: Rename *.pc files.
	* Makefile.am: Append "-1.0" suffix. Sort statements. Add comments.
	* docs/reference/libepc/Makefile.am: Change DOC_MODULE name.
	* docs/reference/libepc/.gitignore: Update file names.

2007-11-14  Mathias Hasselmann  <mathias@openismus.com>

	Rename configure.in to configure.ac.

2007-11-14  Mathias Hasselmann  <mathias@openismus.com>

	Add application argument to epc_publisher_new for controling DNS-SD
	service type: As the examples demonstrate, automatically using
	g_get_prgname only works in themost simplistic cases.

	* libepc/publisher.c, libepc/publisher.h: Add application argument
	and property of the same name to EpcPublisher.
	* examples/simple-publisher.c, tests/test-publisher-libsoup-494128.c
	tests/test-consumer-by-name.c, tests/test-publisher-change-name.c:
	Pass application name to epc_publisher_new.

2007-11-14  Mathias Hasselmann  <mathias@openismus.com>

	Improve examples and give them better names.

	* examples/consumer-ui.c: Rename examples/test-consumer.c.
	Remove command line interface. Use epc_consumer_list.
	* examples/simple-publisher.c: Rename examples/test-publisher.c.
	* examples/list-resources.c: Improve comments.
	* examples/lookup-resource.c: Minimalistic value lookup example.
	* examples/.gitignore, Makefile.am: Update examples.

2007-11-14  Mathias Hasselmann  <mathias@openismus.com>

	Remove bogous description of a return value
	for epc_password_dialog_set_anonymous_allowed.

	* libepc-ui/password-dialog.c: Remove bogous description.

2007-11-14  Mathias Hasselmann  <mathias@openismus.com>

	Resolve authentication dead-lock.
