@@ -40,8 +40,8 @@
  * @include: libepc/publish.h
  * @stability: Unstable
  *
- * With each request the #EpcPublisher verify access authorization by calling
- * the #EpcAuthHandler registered for the key in question. Information about
+ * With each request the #EpcPublisher verifies access authorization by calling
+ * the #EpcAuthHandler registered for the key in question, if any. Information about
  * that process is stored in the #EpcAuthContext structure.
  *
  * To register an authentication handler call #epc_publisher_set_auth_handler:
@@ -120,10 +120,10 @@
  * @stability: Unstable
  *
  * The #EpcPublisher starts a HTTP server to publish information.
- * To allow #EpcConsumer to find it, it automatically publishes
+ * To allow #EpcConsumer to find the publisher it automatically publishes
  * its contact information (host name, TCP/IP port) per DNS-SD.
  *
- * Also there are some ideas on using DNS-DS to notify #EpcConsumer on changes.
+ * In future it might use DNS-DS to notify #EpcConsumer of changes.
  *
  * <example id="publish-value">
  *  <title>Publish a value</title>
@@ -976,7 +976,7 @@ epc_publisher_new (const gchar *name,
  *
  * Publishes a new @value on the #EpcPublisher using the unique @key for
  * addressing. When -1 is passed for @length, @value is expected to be a
- * null-terminated string and its length is determined automatically
+ * null-terminated string and its length in bytes is determined automatically
  * using <function>strlen</function>.
  *
  * <note><para>
@@ -985,7 +985,7 @@ epc_publisher_new (const gchar *name,
  *  with a @key is chosen by the application providing values and has
  *  to be specified separately.
  *
- *  Even though, when publishing plain text it is strongly recommended
+ *  However, when publishing plain text it is strongly recommended
  *  to use UTF-8 encoding to avoid internationalization issues.
  * </para></note>
  */
@@ -1049,13 +1049,14 @@ epc_publisher_add_file (EpcPublisher  *self,
  * @user_data: data to pass on @handler calls
  * @destroy_data: a function for releasing @user_data
  *
- * Publishes contents on the #EpcPublisher which is generated by a custom
- * #EpcContentsHandler. This is the most flexible method for publishing
+ * Publishes contents on the #EpcPublisher which are generated by a custom
+ * #EpcContentsHandler callback. This is the most flexible method for publishing
  * information.
  *
  * The @handler is called on every request matching @key.
- * On this call @publisher, @key and @user_data are passed to the @handler.
- * When replacing or deleting the resource referenced by @key, the function
+ * When called, @publisher, @key and @user_data are passed to the @handler.
+ * When replacing or deleting the resource referenced by @key,
+ * or when the the Publisher is destroyed, the function
  * described by @destroy_data is called with @user_data as argument.
  */
 void
@@ -1089,7 +1090,8 @@ epc_publisher_add_handler (EpcPublisher      *self,
  * The @handler is called on every request matching @key. On this call
  * a temporary #EpcAuthContext and @user_data are passed to the @handler.
  * The #EpcAuthContext references the @publisher and @key passed here.
- * When replacing or deleting the resource referenced by @key, the function
+ * When replacing or deleting the resource referenced by @key, or when
+ * the publisher is destroyed, the function
  * described by @destroy_data is called with @user_data as argument.
  */
 void
@@ -1148,7 +1150,7 @@ epc_publisher_set_service_name (EpcPublisher *self,
  * @keyfile: file name of the private key
  *
  * Changes the file names of the PEM encoded TLS credentials the publisher use
- * for it's services, when the transport #EpcPublisher:protocol is
+ * for its services, when the transport #EpcPublisher:protocol is
  * #EPC_PROTOCOL_HTTPS.
  *
  * See #EpcPublisher:certificate-file and
@@ -1367,8 +1369,7 @@ epc_auth_context_get_key (EpcAuthContext *context)
  * Verifies that the password passed with the authentication request described
  * by @context matches the expected @password. The password cannot be verify
  * directly (i.e. by <function>strcmp</function>) because the authentication
- * mechanism sends hash codes ("fingerprints") instead of the actual password
- * password.
+ * mechanism sends hash codes ("fingerprints") instead of the actual password.
  *
  * Returns: %TRUE when the sent password matches, or %FALSE otherwise.
  */
